[package]
name = "testroute"
version = "0.1.1"
edition = "2021"
description = "Create an easy mock HTTP server with a route for your frontend or anything"
license = "MIT"
documentation = "https://github.com/cherryramatisdev/testroute"
homepage = "https://github.com/cherryramatisdev/testroute"
repository = "https://github.com/cherryramatisdev/testroute"

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.16", features = ["derive"] }
inquire = "0.7.5"
serde = "1.0.208"
serde_json = "1.0.125"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.39.3", features = ["full"]}
thiserror = "1.0"